# savane

./: .gitignore  AUTHORS  AUTHORS.Savannah  BUILD-DEB  ChangeLog  ChangeLog.commits  INSTALL  INSTALL.verbose  Makefile.am  Makefile.in  Makefile.in.savane  NEWS  README  REQUIREMENTS  TODO  bootstrap  configure  configure.ac  configure.cache  configure.savane  configure.sh  rsync.sh  run-local-dev.sh
backend/: Makefile.am  Makefile.in  README
backend/accounts/: .gitignore  README  sv_assign_uid_gid.in  sv_authorized_keys  sv_get_authorized_keys.in  sv_groups.in  sv_groups.pl  sv_homedirs  sv_membersh.in  sv_membersh.pl  sv_ssh_access.in  sv_users.in  sv_users.pl
backend/download/: .gitignore  sv_gpgcheckfiles.in  sv_gpgcheckfiles.pl
backend/export/: .gitignore  sv_export.in  sv_export.pl  sv_export_cleaner.in  sv_export_cleaner.pl
backend/extra/: .gitignore  README
backend/extra/cvs/: sv_extra_daily_cvs_tarball.in  sv_extra_daily_cvs_tarball.pl  sv_extra_daily_cvs_tarball_forbid.in  sv_extra_daily_cvs_tarball_forbid.pl  sv_extra_import_cvs.in  sv_extra_import_cvs.pl  sv_extra_pserver_cvsroots.in  sv_extra_pserver_cvsroots.pl  sv_extra_viewcvs_forbidden.in  sv_extra_viewcvs_forbidden.pl
backend/extra/siteadmin/: sv_extra_dead_projects.in  sv_extra_dead_projects.pl  sv_extra_merge_projects.in  sv_extra_merge_projects.pl
backend/extra/subversion/: sv_extra_daily_svn_tarball.in  sv_extra_daily_svn_tarball.pl  sv_extra_svn_postcommit_brigde.in  sv_extra_svn_postcommit_brigde.pl
backend/install/: .gitignore  sv_update_conf.in  sv_update_conf.pl
backend/mail/: .gitignore  sv_aliases.in  sv_aliases.pl  sv_mailman.in  sv_mailman.pl  sv_mailman_and_mailarchivedotcom.in  sv_mailman_and_mailarchivedotcom.pl
backend/misc/: .gitignore  README  sv_cleaner.in  sv_cleaner.pl  sv_reminder.in  sv_reminder.pl  sv_spamcheck_monitor.in  sv_spamcheck_monitor.pl  sv_spamcheck_peon.in  sv_spamcheck_peon.pl  sv_spamcheck_scholar.in  sv_spamcheck_scholar.pl  sv_spammers_purge.in  sv_tmpgpg
backend/system-specific/: Makefile.am  README
backend/system-specific/darwin/: Makefile.am  README  groupadd  groupdel  sv_extra_ni_dump.sh  useradd  userdel  usermod
db/: Makefile.in  README  TODO
etc/: Makefile.am  Makefile.in  README  apache  apache-mail  apache2  crontab  crontab-cvs  crontab-download  crontab-export  crontab-mail  crontab-members-shell  crontab-misc  crontab-spamcheck  libnss-mysql.cfg  logrotate  membersh-conf.pl  spamassassin.pl
etc/site-specific-content/: contact.txt  dnsbl.txt  forbidden_group_names.txt  forbidden_mail_domains.txt  forbidden_theme.txt  hashes.txt  homepage.txt  menu.txt  new-project-index.html  page_footer.txt  page_header.txt
etc/site-specific-content/account/: editsshkeys.txt  index_gpg.txt  index_intro.txt  index_passwd.txt  index_ssh.txt  login.txt  login_msie.txt  login_msiemac.txt
etc/site-specific-content/admin/: groupedit_grouptype.txt  groupedit_intro.txt  groupedit_outro.txt  groupedit_sysname.txt  proj_email.txt
etc/site-specific-content/arch/: index.txt
etc/site-specific-content/bzr/: index.txt
etc/site-specific-content/cvs/: index.txt
etc/site-specific-content/git/: index.txt
etc/site-specific-content/hg/: index.txt
etc/site-specific-content/mail/: about_list_creation.txt
etc/site-specific-content/my/: groups.txt  index.txt  items.txt  request_for_inclusion.txt
etc/site-specific-content/people/: createjob.txt  editjob.txt  editresume.txt  index.txt  index_cat.txt  index_group.txt  viewprofile.txt
etc/site-specific-content/predefined_mails/: project_apparently_dead.txt  project_still_pending.txt
etc/site-specific-content/project/admin/: index_misc.txt
etc/site-specific-content/register/: basicinfo.txt  basicinfo_comments.txt  basicinfo_description.txt  basicinfo_software.txt  confirmation.txt  confirmation_mail.txt  index.txt  license.txt  projectname.txt  projectname_test.txt  projecttype_long.txt  projecttype_short.txt  requirements.txt
etc/site-specific-content/svn/: index.txt
frontend/php/images/: .gitignore  CERN.theme  CodeX.theme  Makefile.am  Makefile.in  README  README.tangoset  Right.theme  SoftGreen.theme  inspect.pl
frontend/php/images/DarkSlate.theme/: arrows  contexts  misc
frontend/php/images/Elessar.theme/: README
frontend/php/images/Emeraud.theme/: arrows  bool  contexts-Emeraud  misc
frontend/php/images/Forest.theme/: README
frontend/php/images/Gna.theme/: roles
frontend/php/images/Light.theme/: README  contexts  misc
frontend/php/images/LinuxfrPointOrg.theme/: README  misc
frontend/php/images/OldCERN.theme/: bool  misc
frontend/php/images/Reverse.theme/: README  roles
frontend/php/images/SlashD.theme/: README  arrows  bool
frontend/php/images/Water.theme/: README
frontend/php/images/common/: COPYING.CC0  README  gnalogo.xcf  icon.xcf
frontend/php/images/common/arrows2/: .gitignore
frontend/php/images/common/bool-Emeraud/: .gitignore
frontend/php/images/common/bool1/: .gitignore
frontend/php/images/common/contexts-Emeraud/: .gitignore
frontend/php/images/common/contexts1/: .gitignore
frontend/php/images/common/misc-DarkSlate/: .gitignore
frontend/php/images/mime_type/: .gitignore  README
frontend/php/images/misc/: README
frontend/php/images/pllx.theme/: README  bool  contexts  gnalogo.xcf  misc
frontend/php/images/www.gnu.org.theme/: README  contexts
lib/: .gitignore  Makefile.PL  Makefile.am  Makefile.in.savane  README  Savane.pm  Savane.pm.in  savane.conf.pl.in  sv_pm_true  uninstall.pl
lib/Savane/: .gitignore  Bzr.pm  Bzr.pm.in  Conf.pm  Conf.pm.in  Cvs.pm  Cvs.pm.in  DB.pm  DB.pm.in  Download.pm  Download.pm.in  Frontend.pm  Frontend.pm.in  Git.pm  Git.pm.in  Groups.pm  Groups.pm.in  Hg.pm.in  Locks.pm  Locks.pm.in  Mail.pm  Mail.pm.in  Mercurial.pm  Session.pm  Session.pm.in  Svn.pm  Svn.pm.in  Trackers.pm  Trackers.pm.in  User.pm  User.pm.in  Util.pm  Util.pm.in  Version.pm  Version.pm.in
lib/Savane/Frontend/: Exit.pm  Exit.pm.in
local/: Makefile.am
local/apache2/conf/: apache2.conf.template
local/savane/: savane.conf.php.template
(+763 files in other folders)
