bin_SCRIPTS = \
	accounts/sv_groups \
	accounts/sv_get_authorized_keys \
	accounts/sv_users \
	accounts/sv_membersh \
	export/sv_export \
	export/sv_export_cleaner \
	mail/sv_mailman \
	mail/sv_aliases \
	mail/sv_mailman_and_mailarchivedotcom \
	extra/subversion/sv_extra_svn_postcommit_brigde \
	extra/subversion/sv_extra_daily_svn_tarball \
	extra/cvs/sv_extra_daily_cvs_tarball \
	extra/cvs/sv_extra_viewcvs_forbidden \
	extra/cvs/sv_extra_daily_cvs_tarball_forbid \
	extra/cvs/sv_extra_import_cvs \
	extra/cvs/sv_extra_pserver_cvsroots \
	extra/siteadmin/sv_extra_dead_projects \
	extra/siteadmin/sv_extra_merge_projects \
	install/sv_update_conf \
	download/sv_gpgcheckfiles \
	misc/sv_spamcheck_peon \
	misc/sv_reminder \
	misc/sv_spamcheck_monitor \
	misc/sv_cleaner \
	misc/sv_spamcheck_scholar \
	misc/sv_spammers_purge \
	misc/sv_tmpgpg \
	accounts/sv_assign_uid_gid \
	accounts/sv_homedirs \
	accounts/sv_authorized_keys

EXTRA_DIST = $(bin_SCRIPTS)

SUBDIRS = system-specific
